# sample-translator

./: CMakeLists.txt  README.md  XISignatureDumper.sln
ProjectTranslator/ProjectTranslator/: ProjectTranslatorCommandHandler.cs
ProjectTranslator/ProjectTranslatorUI/: Program.cs
ProjectTranslator/XcodeProjectParser/: LexerErrorListener.cs  ParsingErrorListener.cs  ProjectParserListener.cs
SampleTranslator/: FindClassesAction.cpp  FindClassesAction.h  SampleASTConsumer.cpp  SampleASTConsumer.h  SampleVisitor.cpp  SampleVisitor.h  Writer.cpp  Writer.h  main.cpp
SampleTranslator.xcodeproj/: project.pbxproj
SampleTranslator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
XISignatureDumper/: AssemblyPathLocator.cs  Program.cs  SignatureExtruder.cs  XISignatureDumper.csproj
XISignatureDumper/XISignatureDumper/: EmptyEnumeration.cs  Program.cs  SignatureExtruder.cs
XS addin/ProjectTranslator/: ProjectTranslator.csproj
XS addin/ProjectTranslatorUI/: ConversionPreferences.cs  ProjectTranslatorUI.csproj
XSAddin/: ProjectTranslator.sln  addin-project.xml
XSAddin/ProjectTranslator/: ProjectTranslator.csproj  ProjectTranslatorCommandHandler.cs  ProjectTranslatorCommands.cs  SettingsWindow.cs  Translator.Addin.csproj
XSAddin/ProjectTranslatorUI/: ConversionPreferences.cs  Settings.cs  Translator.UI.csproj
XSAddin/Translator.Addin/: Translator.Addin.csproj  packages.config
XSAddin/Translator.Core/: ClangArgBuilder.cs  CommonTypes.cs  MethodHelper.cs  ObjCMethod.cs  Platform.cs  SelectorHelper.cs  SourceCodeTranslator.cs  TranslationUnitPorter.cs  (+2 more)
(+186 files in other folders)
